<resources>
    <string name="app_name">Coolab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="proceed_to">Proceed to</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="Phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_events">Events</string>
    <string name="title_feed">Feed</string>
    <string name="Settings">Settings</string>
    <string name="Username">Username</string>
    <string name="main_text">Main Text</string>
    <string name="sub_text">Sub text</string>
    <string name="c_l_i_q_u_e">C L I Q U E</string>
    <string name="coolab">Coolab</string>
    <string name="log_in">log in</string>
</resources>