<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageView
            android:id="@+id/imageViewStart"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_211sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/background"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:src="@drawable/globe" />



            <LinearLayout
            android:id="@+id/childLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_355sdp"
            android:background="@drawable/round_background"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sofia_pro_black"
                android:gravity="center"
                android:text="@string/proceed_to"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sofia_pro_bold"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextUsername"
                style="@style/MyEditTextStyle"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@android:color/white"
                android:drawableEnd="@drawable/user"
                android:drawableRight="@drawable/user"
                android:drawableTint="@android:color/white"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/MyEditTextStyle"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_1sdp"
                android:backgroundTint="@android:color/white"
                android:drawableEnd="@drawable/email"
                android:drawableRight="@drawable/email"
                android:drawableTint="@android:color/white"
                android:hint="@string/email_address" />

            <EditText
                android:id="@+id/editTextPhone"
                style="@style/MyEditTextStyle"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_1sdp"
                android:backgroundTint="@android:color/white"
                android:drawableEnd="@drawable/phone"
                android:drawableRight="@drawable/phone"
                android:drawableTint="@android:color/white"
                android:hint="@string/Phone_number"
                app:backgroundTint="@android:color/white" />

            <EditText
                android:inputType="textPassword"
                android:id="@+id/editTextPassword"
                style="@style/MyEditTextStyle"
                android:layout_width="@dimen/_240sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_1sdp"
                android:backgroundTint="@android:color/white"
                android:drawableEnd="@drawable/pass"
                android:drawableRight="@drawable/pass"
                android:drawableTint="@android:color/white"
                android:hint="@string/password"
                app:backgroundTint="@android:color/white" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="@dimen/_155sdp"
                android:layout_height="@dimen/_47sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/button_round"
                android:fontFamily="@font/sofia_pro_bold"
                android:text="Submit"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

