<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/Settings" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_190sdp"
            android:background="@color/settingback">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:layout_gravity="center"

                    android:id="@+id/profilePicture"
                    android:layout_width="322dp"
                    android:layout_height="152dp"
                    android:layout_marginTop="@dimen/_28sdp"
                    android:src="@drawable/circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Username"
                    android:textColor="@color/username"
                    android:textSize="@dimen/_20ssp"
                    android:fontFamily="@font/sofia_pro_bold"
                    android:padding="@dimen/_10sdp"
                    android:layout_gravity="center"
                    />
            </LinearLayout>




        </RelativeLayout>

        <ListView
            android:id="@+id/settingsList"
            android:layout_width="match_parent"
            android:layout_height="254dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="from"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/sofia_pro_extra_light"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_l_i_q_u_e"
            android:layout_gravity="center"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/sofia_pro_bold"
            android:textColor="@color/colorPrimary"/>


    </LinearLayout>




</FrameLayout>